<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="8dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="4dp"
    android:padding="4dp"
    android:background="@color/app_secondary_accent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expected_msg_txt_header"
            android:text="@string/your_expected_message_from_friends"
            android:textSize="10sp"
            android:textColor="@color/header_color"
            android:layout_marginTop="@dimen/margin_sixteen"
            android:layout_marginEnd="@dimen/margin_sixteen"
            android:layout_marginStart="@dimen/margin_sixteen"/>
        <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/expected_msg_txt"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/margin_sixteen"
        android:layout_marginStart="@dimen/margin_sixteen"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reply_msg_txt_header"
            android:text="@string/your_reply_message"
            android:textSize="10sp"
            android:textColor="@color/app_secondary_text"
            android:layout_marginTop="@dimen/margin_ten"
            android:layout_marginEnd="@dimen/margin_sixteen"
            android:layout_marginStart="@dimen/margin_sixteen"/>
        <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reply_msg_txt"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/margin_sixteen"
        android:layout_marginStart="@dimen/margin_sixteen"
        android:layout_marginBottom="@dimen/margin_sixteen"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/divider_line"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:layout_marginTop="@dimen/margin_eight"
            android:layout_marginEnd="@dimen/padding_sixteen"
            android:text="@string/delete_msg"
            android:background="@drawable/button_background"
            android:layout_marginBottom="@dimen/margin_eight"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_gravity="end"
            android:visibility="gone"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>